from home @privateAPI

--- a/ccxt_api_test/orderMgt/order1.ipynb
+++ b/ccxt_api_test/orderMgt/order1.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### instantiation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -45,65 +53,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'info': {'orderId': '1020657390',\n",
-       "  'symbol': 'ETHUSDT',\n",
-       "  'status': 'NEW',\n",
-       "  'clientOrderId': 'MYThfa6NBd3B3y6cNTumpJ',\n",
-       "  'price': '0',\n",
-       "  'avgPrice': '0.00000',\n",
-       "  'origQty': '1',\n",
-       "  'executedQty': '0',\n",
-       "  'cumQty': '0',\n",
-       "  'activatePrice': '1698.49',\n",
-       "  'priceRate': '3.0',\n",
-       "  'cumQuote': '0',\n",
-       "  'timeInForce': 'GTC',\n",
-       "  'type': 'TRAILING_STOP_MARKET',\n",
-       "  'reduceOnly': False,\n",
-       "  'closePosition': False,\n",
-       "  'side': 'BUY',\n",
-       "  'positionSide': 'BOTH',\n",
-       "  'stopPrice': '0',\n",
-       "  'workingType': 'CONTRACT_PRICE',\n",
-       "  'priceProtect': False,\n",
-       "  'origType': 'TRAILING_STOP_MARKET',\n",
-       "  'updateTime': '1678860098799'},\n",
-       " 'id': '1020657390',\n",
-       " 'clientOrderId': 'MYThfa6NBd3B3y6cNTumpJ',\n",
-       " 'timestamp': 1678860098799,\n",
-       " 'datetime': '2023-03-15T06:01:38.799Z',\n",
-       " 'lastTradeTimestamp': None,\n",
-       " 'symbol': 'ETH/USDT:USDT',\n",
-       " 'type': 'trailing_stop_market',\n",
-       " 'timeInForce': 'GTC',\n",
-       " 'postOnly': False,\n",
-       " 'reduceOnly': False,\n",
-       " 'side': 'buy',\n",
-       " 'price': None,\n",
-       " 'triggerPrice': None,\n",
-       " 'amount': 1.0,\n",
-       " 'cost': 0.0,\n",
-       " 'average': None,\n",
-       " 'filled': 0.0,\n",
-       " 'remaining': 1.0,\n",
-       " 'status': 'open',\n",
-       " 'fee': {'currency': None, 'cost': None, 'rate': None},\n",
-       " 'trades': [],\n",
-       " 'fees': [{'currency': None, 'cost': None, 'rate': None}],\n",
-       " 'stopPrice': None}"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "exchange.create_order(\n",
     "    'ETHUSDT',\n",
