--- a/src/outer/jupyter/CCXTTRADER.ipynb
+++ b/src/outer/jupyter/CCXTTRADER.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,33 +112,30 @@
     "        # define how to process the streamed data\n",
     "\n",
     "        # extract data from the response\n",
-    "        start_time = pd.to_datetime(res[-1][0], unit='ms')\n",
+    "        incoming_latest_time = pd.to_datetime(res[-1][0], unit='ms')\n",
     "        first = res[-1][1]\n",
     "        high = res[-1][2]\n",
     "        low = res[-1][3]\n",
     "        close = res[-1][4]\n",
     "        volume = res[-1][5]\n",
     "        \n",
-    "        print(res) # test\n",
-    "\n",
     "        # check if a bar is complete\n",
-    "        if start_time == self.last_bar_time:\n",
+    "        if incoming_latest_time == self.last_bar_time:\n",
     "            complete = False\n",
     "        else:  # a new bar is created => add the first bar # res[0]\n",
     "            complete = True\n",
-    "            print(res[0]) # test\n",
     "            if len(res) == 2:\n",
     "                self.data.loc[self.last_bar_time] = [res[0][1],\n",
-    "                                                     res[0][2], res[0][3], res[0][4], res[0][5], True]\n",
+    "                                                     res[0][2], res[0][3], res[0][4], res[0][5], complete]\n",
     "            else:\n",
     "                self.data.loc[self.last_bar_time, 'Complete'] = complete\n",
-    "            self.last_bar_time = start_time  # update the last_bar_time\n",
+    "            self.last_bar_time = incoming_latest_time  # update the last_bar_time\n",
     "\n",
     "        # print sth\n",
     "        print('.', end='', flush=True)\n",
     "\n",
     "        # feed self.data<df> with the latest completed bar\n",
-    "        self.data.loc[start_time] = [first, high, low, close, volume, complete, False]        \n",
+    "        self.data.loc[incoming_latest_time] = [first, high, low, close, volume, False]        \n",
     "\n",
     "        # if a new bar is complete, do trading according to defined strategy\n",
     "        if complete:\n",
@@ -150,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,71 +156,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1725.85, 1725.85, 1725.85, 4.295]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1725.85, 1725.85, 1725.85, 4.295]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1725.85, 1725.85, 1725.85, 4.295]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1725.85, 1725.85, 1725.85, 4.295]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1725.85, 1725.85, 1725.85, 4.295]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1725.85, 1725.85, 1725.85, 4.295]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1725.85, 1725.85, 1725.85, 4.295]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1725.85, 1725.85, 1725.85, 4.295]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1730.0, 1725.85, 1730.0, 5.357]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1730.0, 1725.85, 1730.0, 5.357]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1730.0, 1725.85, 1730.0, 5.357]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1730.0, 1725.85, 1730.0, 5.357]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1730.0, 1725.85, 1730.0, 5.357]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1730.0, 1725.85, 1730.0, 5.357]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1730.0, 1725.85, 1730.0, 5.357]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1730.0, 1725.85, 1730.0, 5.357]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1730.0, 1725.85, 1730.0, 5.357]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1730.0, 1725.85, 1730.0, 5.357]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1730.0, 1725.85, 1730.0, 5.357]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1730.0, 1725.85, 1730.0, 5.357]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1730.0, 1725.85, 1730.0, 5.357]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1730.0, 1725.85, 1730.0, 19.8]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1730.0, 1725.85, 1730.0, 19.8]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1730.0, 1725.85, 1730.0, 19.8]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1730.0, 1725.85, 1730.0, 19.8]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1730.0, 1725.85, 1725.85, 22.037]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1730.0, 1725.85, 1725.85, 22.037]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1730.0, 1725.85, 1725.85, 22.037]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1730.0, 1725.85, 1725.85, 22.037]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1730.0, 1725.85, 1730.0, 22.606]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1730.0, 1725.85, 1730.0, 22.606]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1730.0, 1725.85, 1725.85, 23.158]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1730.0, 1725.85, 1725.85, 25.219]]\n",
-      ".[[1679392380000, 1725.85, 1730.0, 1725.85, 1730.0, 47.928], [1679392440000, 1725.85, 1730.0, 1725.85, 1725.85, 25.219]]\n",
-      ".[[1679392440000, 1725.85, 1730.0, 1725.85, 1725.85, 25.219], [1679392500000, 1725.85, 1725.85, 1725.85, 1725.85, 0.0]]\n",
-      ".\n",
+      "....................................................\n",
       " Define Strategy and execute Trades\n",
-      "[[1679392440000, 1725.85, 1730.0, 1725.85, 1725.85, 25.219], [1679392500000, 1725.85, 1725.85, 1725.85, 1725.85, 0.0]]\n",
-      ".[[1679392440000, 1725.85, 1730.0, 1725.85, 1725.85, 25.219], [1679392500000, 1725.85, 1725.85, 1725.85, 1725.85, 0.0]]\n",
-      ".[[1679392440000, 1725.85, 1730.0, 1725.85, 1725.85, 25.219], [1679392500000, 1725.85, 1725.85, 1725.85, 1725.85, 0.0]]\n",
-      ".[[1679392440000, 1725.85, 1730.0, 1725.85, 1725.85, 25.219], [1679392500000, 1725.85, 1725.85, 1725.85, 1725.85, 0.794]]\n",
-      ".[[1679392440000, 1725.85, 1730.0, 1725.85, 1725.85, 25.219], [1679392500000, 1725.85, 1725.85, 1725.85, 1725.85, 0.794]]\n",
-      ".[[1679392440000, 1725.85, 1730.0, 1725.85, 1725.85, 25.219], [1679392500000, 1725.85, 1725.85, 1725.85, 1725.85, 0.794]]\n",
-      ".[[1679392440000, 1725.85, 1730.0, 1725.85, 1725.85, 25.219], [1679392500000, 1725.85, 1725.85, 1725.85, 1725.85, 0.794]]\n",
-      ".[[1679392440000, 1725.85, 1730.0, 1725.85, 1725.85, 25.219], [1679392500000, 1725.85, 1730.0, 1725.85, 1730.0, 78.895]]\n",
-      ".[[1679392440000, 1725.85, 1730.0, 1725.85, 1725.85, 25.219], [1679392500000, 1725.85, 1730.0, 1725.85, 1725.85, 82.035]]\n",
-      ".[[1679392440000, 1725.85, 1730.0, 1725.85, 1725.85, 25.219], [1679392500000, 1725.85, 1730.0, 1725.85, 1725.85, 82.035]]\n",
-      ".[[1679392440000, 1725.85, 1730.0, 1725.85, 1725.85, 25.219], [1679392500000, 1725.85, 1730.0, 1725.85, 1725.85, 82.585]]\n",
-      ".[[1679392440000, 1725.85, 1730.0, 1725.85, 1725.85, 25.219], [1679392500000, 1725.85, 1730.0, 1725.85, 1725.85, 82.585]]\n",
-      ".[[1679392440000, 1725.85, 1730.0, 1725.85, 1725.85, 25.219], [1679392500000, 1725.85, 1730.0, 1725.85, 1725.85, 83.3]]\n",
-      ".[[1679392440000, 1725.85, 1730.0, 1725.85, 1725.85, 25.219], [1679392500000, 1725.85, 1730.0, 1725.85, 1725.85, 83.3]]\n",
-      ".[[1679392440000, 1725.85, 1730.0, 1725.85, 1725.85, 25.219], [1679392500000, 1725.85, 1730.0, 1725.85, 1725.85, 83.3]]\n",
-      ".[[1679392440000, 1725.85, 1730.0, 1725.85, 1725.85, 25.219], [1679392500000, 1725.85, 1730.0, 1725.85, 1725.85, 83.3]]\n",
-      ".[[1679392440000, 1725.85, 1730.0, 1725.85, 1725.85, 25.219], [1679392500000, 1725.85, 1730.0, 1725.85, 1725.85, 85.636]]\n",
-      ".[[1679392440000, 1725.85, 1730.0, 1725.85, 1725.85, 25.219], [1679392500000, 1725.85, 1730.0, 1725.85, 1725.85, 85.636]]\n",
-      ".[[1679392440000, 1725.85, 1730.0, 1725.85, 1725.85, 25.219], [1679392500000, 1725.85, 1730.0, 1725.85, 1725.85, 85.636]]\n",
-      ".[[1679392440000, 1725.85, 1730.0, 1725.85, 1725.85, 25.219], [1679392500000, 1725.85, 1730.0, 1725.85, 1725.85, 85.636]]\n",
-      "."
+      "........................................................\n",
+      " Define Strategy and execute Trades\n",
+      ".........................................................\n",
+      " Define Strategy and execute Trades\n",
+      "..."
      ]
     }
    ],
@@ -233,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -251,16 +197,19 @@
      "text": [
       "                        Open     High      Low    Close   Volume  Complete\n",
       "Date                                                                      \n",
-      "2023-03-21 09:45:00  1718.00  1725.85  1718.00  1719.00   56.384      True\n",
-      "2023-03-21 09:46:00  1719.00  1725.85  1719.00  1719.00    3.196      True\n",
-      "2023-03-21 09:47:00  1719.00  1730.00  1719.00  1725.85   54.583      True\n",
-      "2023-03-21 09:48:00  1730.00  1730.00  1725.85  1725.85    5.831      True\n",
-      "2023-03-21 09:49:00  1725.85  1730.00  1725.85  1730.00  147.990      True\n",
-      "2023-03-21 09:50:00  1730.00  1730.00  1725.85  1730.00   11.587      True\n",
-      "2023-03-21 09:51:00  1725.85  1730.00  1725.85  1725.85   14.476      True\n",
-      "2023-03-21 09:52:00  1730.00  1730.00  1725.85  1730.00   14.880      True\n",
-      "2023-03-21 09:53:00  1725.85  1730.00  1725.85  1730.00   47.928      True\n",
-      "2023-03-21 09:54:00  1725.85  1730.00  1725.85  1725.85   25.219      True\n"
+      "2023-03-21 11:23:00  1728.99  1730.00  1707.22  1730.00   60.782      True\n",
+      "2023-03-21 11:24:00  1730.00  1730.00  1714.44  1714.44   36.747      True\n",
+      "2023-03-21 11:25:00  1714.44  1730.00  1705.46  1705.46   97.327      True\n",
+      "2023-03-21 11:26:00  1708.00  1716.51  1705.46  1705.46   14.160      True\n",
+      "2023-03-21 11:27:00  1705.46  1730.00  1705.46  1730.00   14.027      True\n",
+      "2023-03-21 11:28:00  1725.85  1730.00  1714.44  1719.94  148.132      True\n",
+      "2023-03-21 11:29:00  1725.85  1729.96  1720.92  1725.85    3.231      True\n",
+      "2023-03-21 11:30:00  1720.92  1730.00  1707.22  1730.00  264.343      True\n",
+      "2023-03-21 11:31:00  1721.75  1730.00  1705.46  1705.46  131.623      True\n",
+      "2023-03-21 11:32:00  1713.59  1714.44  1705.46  1713.59    7.896      True\n",
+      "2023-03-21 11:33:00  1705.46  1730.00  1705.46  1721.75  141.532      True\n",
+      "2023-03-21 11:34:00  1721.75  1726.54  1721.70  1725.85   19.629      True\n",
+      "2023-03-21 11:35:00  1721.70  1721.70  1721.70  1721.70    0.652     False\n"
      ]
     }
    ],
