--- a/ccxt_api_test/define_data_structure/basicTest.ipynb
+++ b/ccxt_api_test/define_data_structure/basicTest.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### basic test --- instantiation of exchange"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,6 +113,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### basic test --- exchange attributes part 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 57,
    "metadata": {},
@@ -143,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### time conversion"
+    "### basic test --- exchange attributes part 2"
    ]
   },
   {
@@ -406,6 +422,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### learn pandas & np"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 67,
    "metadata": {},
@@ -487,6 +511,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### define loc_frac"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 70,
    "metadata": {},
@@ -526,29 +558,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "time\n",
-      "2022-08-27    False\n",
-      "2022-08-28    False\n",
-      "2022-08-29    False\n",
-      "2022-08-30    False\n",
-      "2022-08-31    False\n",
-      "              ...  \n",
-      "2023-03-10    False\n",
-      "2023-03-11    False\n",
-      "2023-03-12    False\n",
-      "2023-03-13    False\n",
-      "2023-03-14    False\n",
-      "Length: 200, dtype: bool <class 'pandas.core.series.Series'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(bears, type(bears)) "
    ]
