--- a/ccxt_api_test/orderMgt/orderMgt.ipynb
+++ b/ccxt_api_test/orderMgt/orderMgt.ipynb
@@ -531,6 +531,21 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### reduceOnly?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
