--- a/ccxt_api_test/orderMgt/orderMgt.ipynb
+++ b/ccxt_api_test/orderMgt/orderMgt.ipynb
@@ -535,22 +535,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### reduceOnly?"
+    "### reduceOnly applys for stop_orders: STOP, STOP_MARKET, TAKE_PROFIT, TAKE_PROFIT_MARKET"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
