--- a/src/orderMgt/jupyter/PrivateAPI.ipynb
+++ b/src/orderMgt/jupyter/PrivateAPI.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,6 +853,291 @@
     "    'closePosition': True,\n",
     "    'positionSide': 'LONG'\n",
     "})"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# order's life cycle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'info': {'orderId': '1025882750',\n",
+       "   'symbol': 'ETHUSDT',\n",
+       "   'status': 'NEW',\n",
+       "   'clientOrderId': 'x-xcKtGhcu76a1f50bbbf8b505610890',\n",
+       "   'price': '0',\n",
+       "   'avgPrice': '0',\n",
+       "   'origQty': '0',\n",
+       "   'executedQty': '0',\n",
+       "   'cumQuote': '0',\n",
+       "   'timeInForce': 'GTC',\n",
+       "   'type': 'STOP_MARKET',\n",
+       "   'reduceOnly': True,\n",
+       "   'closePosition': True,\n",
+       "   'side': 'SELL',\n",
+       "   'positionSide': 'LONG',\n",
+       "   'stopPrice': '1680',\n",
+       "   'workingType': 'CONTRACT_PRICE',\n",
+       "   'priceProtect': False,\n",
+       "   'origType': 'STOP_MARKET',\n",
+       "   'time': '1679669677297',\n",
+       "   'updateTime': '1679669677297'},\n",
+       "  'id': '1025882750',\n",
+       "  'clientOrderId': 'x-xcKtGhcu76a1f50bbbf8b505610890',\n",
+       "  'timestamp': 1679669677297,\n",
+       "  'datetime': '2023-03-24T14:54:37.297Z',\n",
+       "  'lastTradeTimestamp': None,\n",
+       "  'symbol': 'ETH/USDT',\n",
+       "  'type': 'stop_market',\n",
+       "  'timeInForce': 'GTC',\n",
+       "  'postOnly': False,\n",
+       "  'reduceOnly': True,\n",
+       "  'side': 'sell',\n",
+       "  'price': None,\n",
+       "  'stopPrice': 1680.0,\n",
+       "  'amount': None,\n",
+       "  'cost': 0.0,\n",
+       "  'average': None,\n",
+       "  'filled': 0.0,\n",
+       "  'remaining': None,\n",
+       "  'status': 'open',\n",
+       "  'fee': None,\n",
+       "  'trades': [],\n",
+       "  'fees': []},\n",
+       " {'info': {'orderId': '1028642080',\n",
+       "   'symbol': 'ETHUSDT',\n",
+       "   'status': 'NEW',\n",
+       "   'clientOrderId': 'x-xcKtGhcuae3a36b8574c44e6799b81',\n",
+       "   'price': '0',\n",
+       "   'avgPrice': '0',\n",
+       "   'origQty': '0.010',\n",
+       "   'executedQty': '0',\n",
+       "   'cumQuote': '0',\n",
+       "   'timeInForce': 'GTC',\n",
+       "   'type': 'STOP_MARKET',\n",
+       "   'reduceOnly': False,\n",
+       "   'closePosition': False,\n",
+       "   'side': 'SELL',\n",
+       "   'positionSide': 'SHORT',\n",
+       "   'stopPrice': '1668',\n",
+       "   'workingType': 'CONTRACT_PRICE',\n",
+       "   'priceProtect': False,\n",
+       "   'origType': 'STOP_MARKET',\n",
+       "   'time': '1679807001552',\n",
+       "   'updateTime': '1679807001552'},\n",
+       "  'id': '1028642080',\n",
+       "  'clientOrderId': 'x-xcKtGhcuae3a36b8574c44e6799b81',\n",
+       "  'timestamp': 1679807001552,\n",
+       "  'datetime': '2023-03-26T05:03:21.552Z',\n",
+       "  'lastTradeTimestamp': None,\n",
+       "  'symbol': 'ETH/USDT',\n",
+       "  'type': 'stop_market',\n",
+       "  'timeInForce': 'GTC',\n",
+       "  'postOnly': False,\n",
+       "  'reduceOnly': False,\n",
+       "  'side': 'sell',\n",
+       "  'price': None,\n",
+       "  'stopPrice': 1668.0,\n",
+       "  'amount': 0.01,\n",
+       "  'cost': 0.0,\n",
+       "  'average': None,\n",
+       "  'filled': 0.0,\n",
+       "  'remaining': 0.01,\n",
+       "  'status': 'open',\n",
+       "  'fee': None,\n",
+       "  'trades': [],\n",
+       "  'fees': []},\n",
+       " {'info': {'orderId': '1028642468',\n",
+       "   'symbol': 'ETHUSDT',\n",
+       "   'status': 'NEW',\n",
+       "   'clientOrderId': 'x-xcKtGhcu64d01001f6d4f82663142f',\n",
+       "   'price': '0',\n",
+       "   'avgPrice': '0',\n",
+       "   'origQty': '0',\n",
+       "   'executedQty': '0',\n",
+       "   'cumQuote': '0',\n",
+       "   'timeInForce': 'GTC',\n",
+       "   'type': 'STOP_MARKET',\n",
+       "   'reduceOnly': True,\n",
+       "   'closePosition': True,\n",
+       "   'side': 'SELL',\n",
+       "   'positionSide': 'LONG',\n",
+       "   'stopPrice': '1668',\n",
+       "   'workingType': 'CONTRACT_PRICE',\n",
+       "   'priceProtect': False,\n",
+       "   'origType': 'STOP_MARKET',\n",
+       "   'time': '1679807226770',\n",
+       "   'updateTime': '1679807226770'},\n",
+       "  'id': '1028642468',\n",
+       "  'clientOrderId': 'x-xcKtGhcu64d01001f6d4f82663142f',\n",
+       "  'timestamp': 1679807226770,\n",
+       "  'datetime': '2023-03-26T05:07:06.770Z',\n",
+       "  'lastTradeTimestamp': None,\n",
+       "  'symbol': 'ETH/USDT',\n",
+       "  'type': 'stop_market',\n",
+       "  'timeInForce': 'GTC',\n",
+       "  'postOnly': False,\n",
+       "  'reduceOnly': True,\n",
+       "  'side': 'sell',\n",
+       "  'price': None,\n",
+       "  'stopPrice': 1668.0,\n",
+       "  'amount': None,\n",
+       "  'cost': 0.0,\n",
+       "  'average': None,\n",
+       "  'filled': 0.0,\n",
+       "  'remaining': None,\n",
+       "  'status': 'open',\n",
+       "  'fee': None,\n",
+       "  'trades': [],\n",
+       "  'fees': []},\n",
+       " {'info': {'orderId': '1028654943',\n",
+       "   'symbol': 'ETHUSDT',\n",
+       "   'status': 'NEW',\n",
+       "   'clientOrderId': 'web_7SCjk4PW0FaUgc05g4cP_2',\n",
+       "   'price': '0',\n",
+       "   'avgPrice': '0',\n",
+       "   'origQty': '0.100',\n",
+       "   'executedQty': '0',\n",
+       "   'cumQuote': '0',\n",
+       "   'timeInForce': 'GTE_GTC',\n",
+       "   'type': 'STOP_MARKET',\n",
+       "   'reduceOnly': True,\n",
+       "   'closePosition': False,\n",
+       "   'side': 'SELL',\n",
+       "   'positionSide': 'LONG',\n",
+       "   'stopPrice': '1680',\n",
+       "   'workingType': 'MARK_PRICE',\n",
+       "   'priceProtect': True,\n",
+       "   'origType': 'STOP_MARKET',\n",
+       "   'time': '1679812640273',\n",
+       "   'updateTime': '1679812640273'},\n",
+       "  'id': '1028654943',\n",
+       "  'clientOrderId': 'web_7SCjk4PW0FaUgc05g4cP_2',\n",
+       "  'timestamp': 1679812640273,\n",
+       "  'datetime': '2023-03-26T06:37:20.273Z',\n",
+       "  'lastTradeTimestamp': None,\n",
+       "  'symbol': 'ETH/USDT',\n",
+       "  'type': 'stop_market',\n",
+       "  'timeInForce': 'GTE_GTC',\n",
+       "  'postOnly': False,\n",
+       "  'reduceOnly': True,\n",
+       "  'side': 'sell',\n",
+       "  'price': None,\n",
+       "  'stopPrice': 1680.0,\n",
+       "  'amount': 0.1,\n",
+       "  'cost': 0.0,\n",
+       "  'average': None,\n",
+       "  'filled': 0.0,\n",
+       "  'remaining': 0.1,\n",
+       "  'status': 'open',\n",
+       "  'fee': None,\n",
+       "  'trades': [],\n",
+       "  'fees': []},\n",
+       " {'info': {'orderId': '1028718553',\n",
+       "   'symbol': 'ETHUSDT',\n",
+       "   'status': 'NEW',\n",
+       "   'clientOrderId': 'x-xcKtGhcu4304a2980aa59b3ad6ea16',\n",
+       "   'price': '0',\n",
+       "   'avgPrice': '0',\n",
+       "   'origQty': '0.010',\n",
+       "   'executedQty': '0',\n",
+       "   'cumQuote': '0',\n",
+       "   'timeInForce': 'GTC',\n",
+       "   'type': 'STOP_MARKET',\n",
+       "   'reduceOnly': True,\n",
+       "   'closePosition': False,\n",
+       "   'side': 'BUY',\n",
+       "   'positionSide': 'SHORT',\n",
+       "   'stopPrice': '2000',\n",
+       "   'workingType': 'MARK_PRICE',\n",
+       "   'priceProtect': False,\n",
+       "   'origType': 'STOP_MARKET',\n",
+       "   'time': '1679827377879',\n",
+       "   'updateTime': '1679827377879'},\n",
+       "  'id': '1028718553',\n",
+       "  'clientOrderId': 'x-xcKtGhcu4304a2980aa59b3ad6ea16',\n",
+       "  'timestamp': 1679827377879,\n",
+       "  'datetime': '2023-03-26T10:42:57.879Z',\n",
+       "  'lastTradeTimestamp': None,\n",
+       "  'symbol': 'ETH/USDT',\n",
+       "  'type': 'stop_market',\n",
+       "  'timeInForce': 'GTC',\n",
+       "  'postOnly': False,\n",
+       "  'reduceOnly': True,\n",
+       "  'side': 'buy',\n",
+       "  'price': None,\n",
+       "  'stopPrice': 2000.0,\n",
+       "  'amount': 0.01,\n",
+       "  'cost': 0.0,\n",
+       "  'average': None,\n",
+       "  'filled': 0.0,\n",
+       "  'remaining': 0.01,\n",
+       "  'status': 'open',\n",
+       "  'fee': None,\n",
+       "  'trades': [],\n",
+       "  'fees': []},\n",
+       " {'info': {'orderId': '1028733253',\n",
+       "   'symbol': 'ETHUSDT',\n",
+       "   'status': 'NEW',\n",
+       "   'clientOrderId': 'x-xcKtGhcu3d58d131e3fbce58ae7417',\n",
+       "   'price': '0',\n",
+       "   'avgPrice': '0',\n",
+       "   'origQty': '0.010',\n",
+       "   'executedQty': '0',\n",
+       "   'cumQuote': '0',\n",
+       "   'timeInForce': 'GTC',\n",
+       "   'type': 'STOP_MARKET',\n",
+       "   'reduceOnly': True,\n",
+       "   'closePosition': False,\n",
+       "   'side': 'SELL',\n",
+       "   'positionSide': 'LONG',\n",
+       "   'stopPrice': '1680',\n",
+       "   'workingType': 'CONTRACT_PRICE',\n",
+       "   'priceProtect': False,\n",
+       "   'origType': 'STOP_MARKET',\n",
+       "   'time': '1679829905089',\n",
+       "   'updateTime': '1679829905089'},\n",
+       "  'id': '1028733253',\n",
+       "  'clientOrderId': 'x-xcKtGhcu3d58d131e3fbce58ae7417',\n",
+       "  'timestamp': 1679829905089,\n",
+       "  'datetime': '2023-03-26T11:25:05.089Z',\n",
+       "  'lastTradeTimestamp': None,\n",
+       "  'symbol': 'ETH/USDT',\n",
+       "  'type': 'stop_market',\n",
+       "  'timeInForce': 'GTC',\n",
+       "  'postOnly': False,\n",
+       "  'reduceOnly': True,\n",
+       "  'side': 'sell',\n",
+       "  'price': None,\n",
+       "  'stopPrice': 1680.0,\n",
+       "  'amount': 0.01,\n",
+       "  'cost': 0.0,\n",
+       "  'average': None,\n",
+       "  'filled': 0.0,\n",
+       "  'remaining': 0.01,\n",
+       "  'status': 'open',\n",
+       "  'fee': None,\n",
+       "  'trades': [],\n",
+       "  'fees': []}]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exchange.fetch_open_orders('ETHUSDT')"
    ]
   }
  ],
