learning design patterns

--- a/ccxt_api_test/learnPython/designPatterns/pythonOOP.ipynb
+++ b/ccxt_api_test/learnPython/designPatterns/pythonOOP.ipynb
@@ -580,10 +580,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 116,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    " # interface\n",
+    "class Observer(metaclass=ABCMeta):\n",
+    "    @abstractmethod\n",
+    "    def update(self, notice): # notice\n",
+    "        pass\n",
+    "\n",
+    "class Notice:\n",
+    "    def __init__(self):\n",
+    "        self.observers = []\n",
+    "    \n",
+    "    def attach(self, *obs):\n",
+    "        print(obs)\n",
+    "        self.observers.extend(obs)\n",
+    "        \n",
+    "    def detach(self, *obs: Observer):\n",
+    "        for obs in obs:\n",
+    "            self.observers.remove(obs)\n",
+    "    \n",
+    "    def notify(self):\n",
+    "        for obs in self.observers:\n",
+    "            obs.update(self)\n",
+    "    \n",
+    "    # def notify(self, signal):\n",
+    "    #     for obs in self.observers:\n",
+    "    #         obs.update(signal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# disclose the information to the observers\n",
+    "class StaffNotice(Notice):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.__company_info = None\n",
+    "    \n",
+    "    @property # getter\n",
+    "    def company_info(self):\n",
+    "        return self.__company_info\n",
+    "    \n",
+    "    @company_info.setter # setter\n",
+    "    def company_info(self, info):\n",
+    "        self.__company_info = info\n",
+    "        # where magic happens\n",
+    "        self.notify()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# observer\n",
+    "class Staff(Observer):\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        self.company_info = None\n",
+    "\n",
+    "    def update(self, notice):\n",
+    "        print(\"Staff %s received notice: %s\" % (self.name, notice.company_info))\n",
+    "        self.company_info = notice.company_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(<__main__.Staff object at 0x0000020B54FAA2B0>, <__main__.Staff object at 0x0000020B54FAA520>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test\n",
+    "notice = StaffNotice()\n",
+    "staff1 = Staff('staff1')\n",
+    "staff2 = Staff('staff2')\n",
+    "notice.attach(staff1, staff2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(staff1.company_info)\n",
+    "print(notice.company_info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Staff staff1 received notice: lcrXLab\n",
+      "Staff staff2 received notice: lcrXLab\n",
+      "lcrXLab\n"
+     ]
+    }
+   ],
+   "source": [
+    "# update the company info\n",
+    "notice.company_info= 'lcrXLab'\n",
+    "print(staff1.company_info)"
+   ]
   },
   {
    "attachments": {},
@@ -591,6 +742,33 @@
    "metadata": {},
    "source": [
     "### Strategy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n",
+      " {'name': 'test', 'age': 18}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def testArgs(**args):\n",
+    "    print(str(type(args))+'\\n', args)\n",
+    "testArgs(name='test', age=18)"
    ]
   },
   {
